# videototicket

./: README.md  pyproject.toml
src/videototicket/: __init__.py  cli.py  installer.py
src/videototicket/payload/: SKILL.md  config.example.json
src/videototicket/payload/scripts/: create_ticket.py  extract_frames.py  ffmpeg_utils.py  list_backlog_items.py  transcribe_audio.py
src/videototicket/payload/scripts/backends/: azure_devops.py  common.py  github.py  jira.py
